tests/fail/elaboration/unification/mismatch/record-type-singleton.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/record-type-singleton.fathom:6:11
  │
6 │ { thing : unit }
  │           ^^^^ type mismatch, expected `Type`, found `()`
  │
  = expected `Type`
       found `()`

'''
